<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>cl.multicaja.prepago</groupId>
  <artifactId>api-prepaid</artifactId>
  <packaging>war</packaging>
  <version>1.0.0</version>

  <properties>
    <war.version>1.0</war.version>
    <classifier>client</classifier>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>1.8</java.version>
    <skipTests>true</skipTests>
    <junit.version>4.12</junit.version>
    <jersey.version>2.26</jersey.version>
    <javaee-api.version>8.0</javaee-api.version>
    <postgresql.version>42.2.1</postgresql.version>
    <spring.version>5.0.0.RELEASE</spring.version>
    <mockito.version>2.21.0</mockito.version>
  </properties>

  <repositories>

    <repository>
      <id>mvnrepository.com</id>
      <url>https://mvnrepository.com/</url>
    </repository>

    <repository>
      <id>download.java.net</id>
      <url>http://download.java.net/maven/2/</url>
      <layout>default</layout>
    </repository>

  </repositories>

  <dependencies>

    <dependency>
      <groupId>cl.multicaja</groupId>
      <artifactId>multicaja-base</artifactId>
      <version>1.0.0</version>
    </dependency>

    <dependency>
      <groupId>cl.multicaja</groupId>
      <artifactId>multicaja-async</artifactId>
      <version>1.0.0</version>
    </dependency>

    <dependency>
      <groupId>cl.multicaja</groupId>
      <artifactId>tecnocom-gateway</artifactId>
      <version>1.0</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.core</groupId>
      <artifactId>jersey-server</artifactId>
      <version>${jersey.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.containers</groupId>
      <artifactId>jersey-container-servlet</artifactId>
      <version>${jersey.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>${javaee-api.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jersey.media</groupId>
      <artifactId>jersey-media-json-jackson</artifactId>
      <version>2.27</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgresql.version}</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>fish.payara.extras</groupId>
      <artifactId>payara-embedded-web</artifactId>
      <version>5.181</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>1.1.0.Final</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.jcraft</groupId>
      <artifactId>jsch</artifactId>
      <version>0.1.54</version>
    </dependency>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-ftp</artifactId>
      <version>2.21.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-quartz2</artifactId>
      <version>2.21.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.sshd</groupId>
      <artifactId>sshd-core</artifactId>
      <version>0.14.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>4.1</version>
    </dependency>

  </dependencies>

  <build>

    <finalName>${project.artifactId}-${war.version}</finalName>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.4</version>
        <configuration>
          <skipTests>${skipTests}</skipTests>
          <includes>
            <include>**/unit/**</include>
          </includes>
          <excludes>
            <exclude>**/integration/**</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <finalName>${project.artifactId}-${project.version}</finalName>
              <classifier>${classifier}</classifier>
              <excludes>
                <exclude>cl/multicaja/prepaid/resources/**</exclude>
                <exclude>cl/multicaja/prepaid/web/**</exclude>
                <exclude>cl/multicaja/prepaid/providers/**</exclude>
                <exclude>cl/multicaja/prepaid/ejb/**/**EJBBeanRemote**</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <failOnMissingWebXml>false</failOnMissingWebXml>
          <packagingExcludes>
            WEB-INF/lib/geronimo-*.jar,
            WEB-INF/lib/activemq-spring-*.jar,
            WEB-INF/lib/camel-spring-*.jar,
            WEB-INF/lib/javax*.jar
          </packagingExcludes>
        </configuration>
      </plugin>

    </plugins>
  </build>

  <profiles>
    <profile>
      <id>integration-test</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.12.4</version>
            <configuration>
              <includes>
                <include>**/integration/TestSuite.class</include>
              </includes>
              <excludes>
                <exclude>**/unit/**</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


</project>
